--- a/index.html
+++ b/index.html
@@ -23,222 +23,246 @@
   <body>
     <!-- Header section -->
     <header id="home" class="main-header">
-      <nav class="main-nav">
-        <!-- <a href="./index.html"> <span>Web</span>Studio</a> -->
-        <!-- <p>WebStudio1</p> -->
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-style">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-item-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-item-link" href="">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-item-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-
-      <address class="address">
-        <ul class="contact-list">
-          <li>
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="main-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-style">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-item-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item-link" href="">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="contact-list">
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Unique content -->
     <main>
       <!-- Hero section -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <!-- Section1 - Features section -->
       <section class="features">
-        <h2 hidden>Our operating principles</h2>
-        <ul class="features-list">
-          <li>
-            <!-- <img
-              src="./images/Section2/antenna1.jpg"
-              alt="Antenna"
-              width="64"
-              height="64"
-            /> -->
-            <h3 class="li-title">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <!-- <img
-              src="./images/Section2/clock1.jpg"
-              alt="Clock"
-              width="64"
-              height="64"
-            /> -->
-            <h3 class="li-title">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <!-- <img
-              src="./images/Section2/diagram1.jpg"
-              alt="Diagram"
-              width="64"
-              height="64"
-            /> -->
-            <h3 class="li-title">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <!-- <img
-              src="./images/Section2/astronaut1.jpg"
-              alt="Diagram"
-              width="64"
-              height="64"
-            /> -->
-            <h3 class="li-title">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Our operating principles</h2>
+          <ul class="features-list section-list">
+            <li class="item">
+              <!-- <img
+                src="./images/Section2/antenna1.jpg"
+                alt="Antenna"
+                width="64"
+                height="64"
+              /> -->
+              <h3 class="li-title">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="item">
+              <!-- <img src="./images/Section2/clock1.jpg" alt="Clock" width="64" height="64"/> -->
+              <h3 class="li-title">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="item">
+              <!-- <img
+                src="./images/Section2/diagram1.jpg"
+                alt="Diagram"
+                width="64"
+                height="64"
+              /> -->
+              <h3 class="li-title">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="item">
+              <!-- <img
+                src="./images/Section2/astronaut1.jpg"
+                alt="Diagram"
+                width="64"
+                height="64"
+              /> -->
+              <h3 class="li-title">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section2  Our Team -->
-      <section class="team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="item">
-            <img
-              src="./images/OurTeam/Mark.jpg"
-              alt="Mark Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="li-title">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/OurTeam/Tom.jpg"
-              alt="Tom Ford Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="li-title">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/OurTeam/Camila.jpg"
-              alt="Camila Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="li-title">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/OurTeam/Daniel.jpg"
-              alt="Daniel Wilson UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="li-title">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list section-list">
+            <li class="item">
+              <img
+                src="./images/OurTeam/Mark.jpg"
+                alt="Mark Product Designer"
+                width="264"
+                height="260"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/OurTeam/Tom.jpg"
+                alt="Tom Ford Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
+            </li>
+
+            <li class="item">
+              <img
+                src="./images/OurTeam/Camila.jpg"
+                alt="Camila Marketing"
+                width="264"
+                height="260"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/OurTeam/Daniel.jpg"
+                alt="Camila Marketing"
+                width="264"
+                height="260"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section3  Our Portfolio -->
-      <section>
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/OurPortfolio/portfilio-img1.jpg"
-              alt="Banking App"
-              width="360"
-            />
-            <h3 class="li-title">Banking App</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/OurPortfolio/portfilio-img2.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="li-title">Cashless Payment</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/OurPortfolio/portfilio-img3.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="li-title">Meditation App</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/OurPortfolio/portfilio-img4.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="li-title">Taxi Service</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/OurPortfolio/portfilio-img5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="li-title">Screen Illustrations</h3>
-            <p class="text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/OurPortfolio/portfilio-img6.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="li-title">Online Courses</h3>
-            <p class="text">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio section">
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="portfolio-list section-list">
+            <li>
+              <img
+                src="./images/OurPortfolio/portfilio-img1.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Banking App</h3>
+                <p class="text">App</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/OurPortfolio/portfilio-img2.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Cashless Payment</h3>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/OurPortfolio/portfilio-img3.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Meditation App</h3>
+                <p class="text">App</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/OurPortfolio/portfilio-img4.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Taxi Service</h3>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/OurPortfolio/portfilio-img5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Screen Illustrations</h3>
+                <p class="text">Design</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/OurPortfolio/portfilio-img6.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <div class="card-text">
+                <h3 class="li-title">Online Courses</h3>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer section -->
     <footer class="main-footer" id="contacts">
-      <a class="logo" href="./index.html"
-        >Web<span class="accent">Studio</span></a
-      >
-      <p class="text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="accent">Studio</span></a
+        >
+        <p class="text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
       <!-- <p>Social media</p>
       <ul>
         <li>
@@ -302,7 +326,6 @@
           </a>
         </li>
       </ul> -->
-
       <!-- <address>
         <p>Contact us</p>
         <ul>
