--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list section-list">
-            <li>
+            <li class="item">
               <img
                 src="./images/OurPortfolio/portfilio-img1.jpg"
                 alt="Banking App"
@@ -192,7 +192,7 @@
                 <p class="text">App</p>
               </div>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/OurPortfolio/portfilio-img2.jpg"
                 alt="Cashless Payment"
@@ -203,7 +203,7 @@
                 <p class="text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/OurPortfolio/portfilio-img3.jpg"
                 alt="Meditation App"
@@ -214,7 +214,7 @@
                 <p class="text">App</p>
               </div>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/OurPortfolio/portfilio-img4.jpg"
                 alt="Taxi Service"
@@ -225,7 +225,7 @@
                 <p class="text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/OurPortfolio/portfilio-img5.jpg"
                 alt="Screen Illustrations"
@@ -236,7 +236,7 @@
                 <p class="text">Design</p>
               </div>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/OurPortfolio/portfilio-img6.jpg"
                 alt="Online Courses"
